# iSpan

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
graph_converter/: CMakeLists.txt  README.md  toy2_edgelist.txt  txt_to_bin_bw.cpp  txt_to_bin_bw_int.cpp  txt_to_bin_fw.cpp  txt_to_bin_fw_int.cpp
script/: avg.py  get_bfs_time.py  get_edge_count.py
src/: CMakeLists.txt  color_propagation.h  fw_bw.h  graph.cpp  graph.h  load_print.cpp  openmp_wcc.hpp  scc_common.h  scc_core.cpp  scc_main.cpp  trim_1_gfq.h  trim_2_3.h  util.h  wtime.h
src_mpi/: CMakeLists.txt  color_propagation.h  fw_bw.h  graph.cpp  graph.h  load_print.cpp  openmp_wcc.hpp  scc_common.h  scc_core.cpp  scc_main.cpp  trim_1_gfq.h  trim_2_3.h  util.h  wtime.h
test/: CMakeLists.txt  test_toy.cpp  test_toy2.cpp  test_util.h
test_mpi/: CMakeLists.txt  test_toy2_mpi.cpp  test_toy_mpi.cpp  test_util.h
